--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -152,7 +152,7 @@ label.lighter {
     color: #CDCDCD;
 }
 .modal-title {
-    color: #555;
+    color: #E94F6A;
     font-family: 'Londrina solid';
     font-size: 25px;
 }
