--- a/views/index.html
+++ b/views/index.html
@@ -66,11 +66,11 @@
   <div class="m-loaderWrap"></div>
   <div class="overlay"></div>
   <div id="logo-hero"><img src="/img/logomeefore.png" width="50" alt="Logo meefore soirées"></div>
-  <div class="hero-img scaled animatable img-0 "></div>
+  <div class="hero-img scaled animatable img-4 "></div>
   <div class="hero-img scaled animatable img-1 "></div>
   <div class="hero-img scaled animatable img-2 "></div>
   <div class="hero-img scaled animatable img-3 "></div>
-  <div class="hero-img scaled animatable img-4 "></div>
+  <div class="hero-img scaled animatable img-0 "></div>
   <div class="hero-img scaled animatable img-5 "></div>
   <div class="hero-img scaled animatable img-6 "></div>
   <div class="hero-img scaled animatable img-7 "></div>
@@ -272,26 +272,22 @@
         <div class="row-events-filters-group">
           <div class="event-filter-label">Vous êtes : </div>
           <div class="event-filter-options filter-mixity">
-            <div class="event-filter">Des filles</div>
-            <div class="event-filter">Des gars</div>
-            <div class="event-filter">Les deux</div>
+            <!-- Dynamically loaded -->
           </div>
         </div>
         <div class="row-events-filters-divider"></div>
         <div class="row-events-filters-group">
           <div class="event-filter-label">Vous avez : </div>
           <div class="event-filter-options filter-agerange">
-            <div class="event-filter">18-25</div>
-            <div class="event-filter">25-30</div>
-            <div class="event-filter">30+</div>
+            <!-- Dynamically loaded -->
           </div>
         </div>
         <div class="row-events-filters-divider"></div>
         <div class="row-events-filters-group">
           <div class="event-filter-label">C'est pour sortir : </div>
           <div class="event-filter-options">
-            <div class="event-filter">Aujourd'hui</div>
-            <div class="event-filter">Plus tard</div>
+            <div class="event-filter slow-down-3">Aujourd'hui</div>
+            <div class="event-filter slow-down-3">Plus tard</div>
           </div>
         </div>
         <button class="theme-btn btn-create-event right">Créer un before</button>
@@ -435,6 +431,8 @@
   <script src="js/src/ladder/lj-ladder.js"></script>
   <script src="js/src/ui/lj-ui.js"></script>
   <script src="js/src/updates/lj-updates.js"></script>
+  <script src="js/src/pusher/lj-pusher.js"></script>
+  <script src="js/src/errors/lj-errors.js"></script>
   <script src="js/src/init/lj-init.js"></script>
 
 </body>
