--- a/public/css/style.css
+++ b/public/css/style.css
@@ -993,7 +993,7 @@ body > header > h5 {
 	
 	
 	
-	
+	 
 	
 	
 	solid #000000;
@@ -1001,8 +1001,8 @@ body > header > h5 {
 }
 
 .toastSuccess {
-   background: #487DC3;
-   border: 1px solid #25315F;
+   background: #E94F6A;
+   border: 1px solid #933546;
    opacity: 0;
 }
 
@@ -1026,7 +1026,7 @@ body > header > h5 {
 }
 
 .toastSuccess .toast-icon {
-   background: #355C90;
+   background: #AE3F53;
    color: white;
 }
 
@@ -1111,8 +1111,8 @@ body > header > h5 {
 
 .menu-item span.underlay {
    width: 44px;
-   background: rgb(247, 0, 0);
-   box-shadow: 0 1px 1px rgb(255, 0, 0);
+   background: rgb(245, 89, 116);
+   box-shadow: 0 1px 1px rgb(221, 63, 89);
    height: 4px;
    border-radius: 1px;
    position: relative;
@@ -1130,73 +1130,9 @@ body > header > h5 {
    padding-top: 3px;
    border-radius: 30px;
    text-align: center;
-   background: rgb(245, 0, 0);
+   background: rgb(233, 79, 106);
    color: white;
-   border: 1px 
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	solid 
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	rgb(197, 7, 7);
+   border: 1px                                                                 solid                                                                 rgb(169, 31, 55);
    top: 0px;
    right: 0px;
    font-size: 11px;
@@ -1282,56 +1218,21 @@ solid #AFAFAF;
    margin: 0 2px;
    border-radius: 2px;
    transition: all ease-out .3s;
+   cursor: pointer;
 }
 
 .btn-cancel {
-   background-color: white;
+   background-color: #eee;
+}
+.btn-cancel:hover {
+	background: #DBDBDB;
 }
 
 
 .btn-validate {
-   background-color: #4C4C4C;
+   background-color: #E94F6A;
    color: white;
-   border: 1px                                                                                                                                                                                                                                                                             
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-solid   #6D6D6D;
+   border: 1px                                                                                                                                                                                                                                                                                                                    solid   #C4465C;
 }
 
 .btn-validating {
@@ -1343,6 +1244,7 @@ solid   #6D6D6D;
 	font-size: 11px;
 	border-radius: 0px;
 	text-transform: uppercase;
+	border: none;
 }
 
 .themeBtn,
@@ -1612,7 +1514,11 @@ input:focus:-ms-input-placeholder {
 
 input[type="submit"]:hover,
 button:hover {
-   cursor: pointer;
+   background: #CD3650;
+   border: none;
+}
+.btn-preview-undo:hover {
+	background: white;
 }
 
 .u-item {
@@ -1791,4 +1697,8 @@ p {
 
 .curtain-loader {
    opacity: 0;
+}
+
+.modal-container .row-input:hover label {
+	color: #E94F6A;
 }
