--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -25,12 +25,12 @@
 }
 
 .row-title .icon {
-   border: 1px solid #A63535;
+   border: 1px solid #484848;
    padding: 7px 5px;
    border-radius: 20px;
    position: relative;
-   background-color: #E94F6A;
-   color: #FFFFFF;
+   background-color: #FEFEFE;
+   color: #E94F6A;
    top: 27px;
    cursor: pointer;
    transition: all ease-out .3s;
@@ -44,7 +44,7 @@
 }
 
 .row-title .icon:not(.active):hover {
-   background: #BB3C53;
+   background: #F9F9F9;
 }
 
 .row-body {
@@ -318,7 +318,7 @@
 }
 
 .row.editing .row-select.modified {
-   background-color: #F2F2F2;
+   background-color: #FFEDF0;
 }
 
 .inspire {
