--- a/public/css/search.css
+++ b/public/css/search.css
@@ -377,14 +377,14 @@ border: 1px solid #133783;
 box-shadow: 0 0 1Px #383838;
 color: white;
 text-shadow: 0 0 1px #8E8E8E;
-padding: 12px 20px;
-font-size: 23px;
+padding: 17px 20px;
+font-size: 17px;
 letter-spacing: 0px;
 position: relative;
 cursor: pointer;
 -webkit-transition: all .5s;
 transition: all .5s;
-font-family: 'Gochi hand';
+font-family: 'Lato';
 }
 
 #facebook_connect:hover .fb-overlay {
