fixed push events

--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -413,6 +413,7 @@
   <script src="js/lib/pikaday.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
   <script src="js/lib/momentwithlocale.min.js"></script>
+  <script src="js/lib/prefixfree.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
   <!-- custom scripts -->
