separated pusher environments

--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -407,7 +407,11 @@
 
   </div>
   
-  <script id="fbAppId"> window.facebook_app_id = "1638104993142222"</script>
+  <script id="app_ids"> 
+    window.facebook_app_id = "1638104993142222";
+    window.pusher_app_id   = "139958";
+  </script>
+
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
