--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -407,7 +407,10 @@
 
   </div>
   
-  <script id="fbAppId"> window.facebook_app_id = "1638108873141834"</script>
+  <script id="app_ids">
+    window.facebook_app_id = "1638108873141834";
+    window.pusher_app_id   = "139959";
+  </script>
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
