--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -407,7 +407,10 @@
 
   </div>
   
-  <script id="fbAppId"> window.facebook_app_id = "1509405206012202"</script>
+  <script id="app_ids">
+    window.facebook_app_id = "1509405206012202";
+    window.pusher_app_id   = "139960";
+  </script>
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
