separated pusher environments

--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -409,7 +409,7 @@
   
   <script id="app_ids">
     window.facebook_app_id = "1509405206012202";
-    window.pusher_app_id   = "139960";
+    window.pusher_app_id   = "e0e801db688ab26d8581";
   </script>
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
