--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -409,7 +409,7 @@
   
   <script id="app_ids"> 
     window.facebook_app_id = "1638104993142222";
-    window.pusher_app_id   = "139958";
+    window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
 
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
