--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -409,7 +409,7 @@
   
   <script id="app_ids">
     window.facebook_app_id = "1638108873141834";
-    window.pusher_app_id   = "139959";
+    window.pusher_app_id   = "eeb38a1856233b29d6df";
   </script>
   <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
