--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -417,7 +417,7 @@
   <script src="js/lib/pikaday.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
   <script src="js/lib/momentwithlocale.min.js"></script>
-  <script src="js/lib/prefixfree.min.js"></script>
+  <!-- <script src="js/lib/prefixfree.min.js"></script> -->
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
   <!-- custom scripts -->
@@ -447,6 +447,7 @@
   <script src="js/src/pusher/lj-pusher.js"></script>
   <script src="js/src/errors/lj-errors.js"></script>
   <script src="js/src/init/lj-init.js"></script>
+  <script src="js/src/lj-junk.js"></script>
 
 </body>
 
