--- a/public/css/events.css
+++ b/public/css/events.css
@@ -214,20 +214,55 @@ display: inline-block;}
 
 .event-accepted-tabview {
 
-display: inline-block;vertical-align: middle;font-size: 12px;background: none;/* border: 1px solid; */border-bottom: 3px solid #DFDFDF;/* border-bottom: 2px solid #eee; *//* border-right: 1px solid #eee; */color: #878787;padding: 10px 20px;position: relative;z-index: 1;cursor: pointer;margin: 0 5px;}
+display: inline-block;
 
+vertical-align: middle;
+
+font-size: 12px;
+
+padding: 10px 20px;
+
+position: relative;
+
+z-index: 1;
+
+cursor: pointer;
+
+margin: 0 5px;
+
+background: white;
+
+color: black;
+
+box-shadow: 2px 2px 3px #ccc;
+
+}
+
+.event-accepted-tabview .bubble {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background: rgb(245, 89, 116);
+  /* background: linear-gradient(#F1667E,#E04964); */
+  /* border: 1px solid #DE415C; */
+  color: white;
+  padding: 4px 7px;
+  border-radius: 100px;
+  transition: all ease-out .15s;
+}
 .event-accepted-tabview.active {
   background: #E94F6A;
   color: white;
-  /* border-right: 1px solid #FCFCFC; */
-  /* border-bottom: 2px solid #FCFCFC; */
-  border-bottom: 3px solid #B03C50;
-  text-shadow: 0 0 1px #DBDBDB;
+  box-shadow: 1px 1px 2px #ccc;
 }
 .event-accepted-tabview:not(.active):hover {
   background: #FFE5E9;
   border-color: #F6D1D7;
   color: #941A2F;
+}
+
+.event-accepted-tabview:not(.active):hover .bubble {
+  opacity: .8;
 }
 
 /* 
@@ -247,7 +282,7 @@ display: inline-block;vertical-align: middle;font-size: 12px;background: none;/*
   height: 83%;
 }
 .event-accepted-chat-messages {
-    height: 189px;
+    height: 180px;
     background: #FFFFFF;
     /* overflow: overlay; */
     position: relative;
@@ -349,10 +384,12 @@ float: right;font-size: 12px;background: #F7F7F7;color: #333333;padding: 7px 12p
 width: 67%;height: 100%;position: relative;}
 
 .event-accepted-chat-message {
-transition: all ease-out .2s;
-overflow: hidden;padding: 0px 20px;position: relative;margin: 8px 0;}
+
+overflow: hidden;padding: 0px 20px;position: relative;margin: 2px 0;}
 .event-accepted-chat-message.sending {
-  opacity: .5;
+  /* opacity: .5!important; */
+}
+.event-accepted-chat-message.bot .event-accepted-chat-text{
 }
 .event-accepted-chat-message.admin .event-accepted-chat-text {
   color: #B9B9B9;
@@ -370,7 +407,33 @@ position: absolute;left: 60px;transform: translateY(-50%);top: 50%;}
 }
 .event-accepted-chat-text {
 
-max-width: 370px;display: inline-block;font-size: 13.5px;font-family: 'Karla';margin-left: 70px;margin-right: 0px;/* background: #FCFCFC; *//* border-bottom: 1px solid #eee; */color: #464646;padding: 10px 10px 10px 10px;border-radius: 4px;position: relative;}
+max-width: 370px;
+
+display: inline-block;
+
+font-size: 13px;
+
+line-height: 17px;
+
+font-family: 'Karla';
+
+margin-left: 80px;
+
+margin-right: 0px;
+
+background: #f5f5f5;
+
+/* border-bottom: 1px solid #eee; */
+
+color: #464646;
+
+padding: 7px 10px;
+
+border-radius: 4px;
+
+position: relative;
+
+}
 
 .event-accepted-chat-text.female {
   /* background: rgb(255, 251, 252); */
@@ -388,11 +451,11 @@ right: 40px;left: auto;}
 
 margin-right: 20px;margin-left: 0;}
 .event-accepted-chat-message.me .event-accepted-chat-text {
-  margin-right: 50px;
+  margin-right: 60px;
   float: right;
-  text-align: right;
-  /* background: #FFF1F3; */
-  /* color: #A20B26; */
+  text-align: left;
+  background: #E94F6A;
+  color: white;
 }
 .event-accepted-chat-sent-at {
   position: absolute;
@@ -533,10 +596,12 @@ background: #FCFCFC;}
 
 .readby {
   position: absolute;
-    z-index: 1;
-    top: -20px;
-    color: #ccc;
-    font-size: 10px;
+  z-index: 1;
+  top: -20px;
+  color: #ccc;
+  font-size: 10px;
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
 }
 
 .event-accepted-chatgroups {
@@ -545,22 +610,39 @@ background: #FCFCFC;}
 .event-accepted-chatgroup {
   display: inline-block;
   border: 1px solid transparent;
-  border-bottom: 1px solid #F6B8C3;
+  border-bottom: 1px solid #DEDEDE;
   font-size: 12px;
   color: #777;
   padding: 10px 20px;
   cursor: pointer;
-  border-radius: 57px 50px 0 0;
+  border-radius: 3Px 3Px;
   transition: background ease-out .15s;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 10px;
+  color: #ccc;
 }
-
+.event-accepted-chatgroup .bubble {
+  background: rgb(245, 89, 116);
+  /* background: linear-gradient(#F1667E,#E04964); */
+  color: white;
+  padding: 4px 7px;
+  position: absolute;
+  top: -5px;
+  border-radius: 100px;
+  transition: all ease-out .15s;
+}
 .event-accepted-chatgroup:hover {
-background: #FFF3F5;
+background: #FCFCFC;
 }
+.event-accepted-chatgroup:hover .bubble {
+opacity: .85;}
 .event-accepted-chatgroup.active {
   background: #FCFCFC;
-  border: 1px solid #F6B8C3;
+  border: 1px solid #DEDEDE;
   border-bottom: none;
+  position: relative;
+  color: #7B7B7B;
 }
 
 .event-accepted-chatwraps {
