pusher presenceevent and chat transition

--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -411,11 +411,13 @@
     window.facebook_app_id = "1638108873141834";
     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
-  <script src="//js.pusher.com/2.2/pusher.min.js"></script>  
+  
+  <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
   <script src="js/lib/momentwithlocale.min.js"></script>
+  <!-- <script src="js/lib/prefixfree.min.js"></script> -->
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
   <!-- custom scripts -->
@@ -445,6 +447,7 @@
   <script src="js/src/pusher/lj-pusher.js"></script>
   <script src="js/src/errors/lj-errors.js"></script>
   <script src="js/src/init/lj-init.js"></script>
+  <script src="js/src/lj-junk.js"></script>
 
 </body>
 
