--- a/views/index-stage.html
+++ b/views/index-stage.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/jscrollpane.css">
   <link rel="stylesheet" href="/css/fontello/css/fontello.css">
+  <link rel="stylesheet" href="/css/flags/css/flag-icon.min.css">
   <link rel="stylesheet" href="/css/hint.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/landing.css">
@@ -412,7 +413,7 @@
     window.pusher_app_id   = "f9e4bf4e8f1e0342ca27";
   </script>
   
-  <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
+   <script src="//js.pusher.com/3.0/pusher.min.js"></script>  
   <script src="dist/lib.js"></script>
   <script src="js/lib/pikaday.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
