--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -75,3 +75,5 @@
 .icon-venus:before { content: '\e849'; } /* '' */
 .icon-mix:before { content: '\e84a'; } /* '' */
 .icon-mars:before { content: '\e84b'; } /* '' */
+.icon-up-open-big:before { content: '\e84c'; } /* '' */
+.icon-down-open-big:before { content: '\e84d'; } /* '' */
