--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?54767374');
-  src: url('../font/fontello.eot?54767374#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?54767374') format('woff'),
-       url('../font/fontello.ttf?54767374') format('truetype'),
-       url('../font/fontello.svg?54767374#fontello') format('svg');
+  src: url('../font/fontello.eot?7809747');
+  src: url('../font/fontello.eot?7809747#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?7809747') format('woff'),
+       url('../font/fontello.ttf?7809747') format('truetype'),
+       url('../font/fontello.svg?7809747#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?54767374#fontello') format('svg');
+    src: url('../font/fontello.svg?7809747#fontello') format('svg');
   }
 }
 */
@@ -130,3 +130,5 @@
 .icon-venus:before { content: '\e849'; } /* '' */
 .icon-mix:before { content: '\e84a'; } /* '' */
 .icon-mars:before { content: '\e84b'; } /* '' */
+.icon-up-open-big:before { content: '\e84c'; } /* '' */
+.icon-down-open-big:before { content: '\e84d'; } /* '' */
