--- a/public/css/pikadate.css
+++ b/public/css/pikadate.css
@@ -173,8 +173,8 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     font-size: 12px;
     line-height: 15px;
     text-align: right;
-    background: #f5f5f5;
     text-align: center;
+    background: #FBFBFB;
 }
 
 .pika-week {
