--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -35,6 +35,8 @@
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/modal.css">
   <link rel="stylesheet" href="/css/pikadate.css">
+  <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
+  <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.flat.css">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -419,6 +421,7 @@
   <script src="js/lib/pikaday.js"></script>
   <script src="js/lib/jscrollpane.mousewheel.js"></script>
   <script src="js/lib/momentwithlocale.min.js"></script>
+  <script src="js/lib/rangeslider.js"></script>
   <!-- <script src="js/lib/prefixfree.min.js"></script> -->
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry" type="text/javascript"></script>
 
